# monorepo

./: .env.docker  PR_COPYABLE.md  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pr.md
.github/workflows/: ci.yml  kani.yml  security-scan.yml
backend/: .env.example  README.md  openapi.yml  package-lock.json  package.json  pnpm-lock.yaml
backend/migrations/: 016_outbox_dlq_columns.sql  033_background_check_results.sql  033_erasure_requests.sql  033_underwriting_ai_risk_score.sql  034_add_missing_indexes.sql  036_listings_search_vector.sql  036_tenant_document_presign.sql  037_credit_score_snapshots.sql  037_refresh_tokens.sql  037_repayment_schedule.sql  038_soroban_event_indexer.sql  039_landlord_verification.sql  039_soft_delete_data_retention.sql  039_tenant_documents_deal_linkage.sql  040_tenant_referral_programme.sql
backend/src/: app.ts  db.ts  index.ts  metrics.ts  request-context.ts  tracing.ts
contracts/: Makefile  README.md
contracts/bond_collateral/: Cargo.toml
contracts/deal_escrow/: Cargo.toml
contracts/deal_escrow/src/: cross_contract_integration_tests.rs  lib.rs
contracts/reentrancy_guard/: Cargo.toml
contracts/rent_payments/: Cargo.toml
contracts/rent_wallet/: Cargo.toml
contracts/scripts/: deploy_rent_wallet.sh
contracts/slashing_module/: Cargo.toml
docs/: MONITORING.md
e2e/helpers/: globalTeardown.ts
frontend/: .gitignore  Dockerfile.dev  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
(+311 files in other folders)
